[package]
name = "aff4_raw_extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
flate2 = "1.0"
itertools = "0.12.0"
yaml-rust = "0.4.5"
zip = "0.6.6"
